# fib

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
src/: args.rs  calculate.rs  calculation.rs  file.rs  format.rs  main.rs  print_fib.rs  print_other.rs
