[package]
name = "fib"
version = "1.2.0"
edition = "2021"
license = "BSL-1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
eyre = "0.6.8"
num-bigint = "0.4.4"
num-traits = "0.2.17"
thousands = "0.2.0"
